Changelog
=========


3.6 - unreleased
----------------

- Handle encoded strings for userids.
  [elro]

- Add MANIFEST.in.
  [WouterVH]


3.5 - 2011-03-19
----------------

- Disable secure cookie in development mode, to ease local testing.
  [hannosch]


3.4 - 2011-03-02
----------------

- Added metadata.xml to the default profile.
  [vincentfretin]


3.3 - 2010-12-30
----------------

- Update login.asp to match Plone 4.1 SSO login form functionality.
  [elro]

- Fix remove.
  [elro]


3.2 - 2010-12-14
----------------

- Remove ``external_login`` method, the normal ``logged_in`` script can be
  used instead.
  [elro]

- Fix refresh.
  [elro]


3.1 - 2010-11-11
----------------

- Remove ``SessionPlugin.validate(ticket)`` method, it was not required.
  [elro]


3.1b1 - 2010-10-18
------------------

- Session refresh.
  [elro]

- ``SessionPlugin.validate(ticket)`` method.
  [elro]

- Close <input> tags properly (chameleon compatibility)
  [swampmonkey]


3.0 - 2010-07-18
----------------

- Update package metadata.
  [hannosch]


3.0b5 - 2010-06-13
------------------

- Make sure to load the right meta ZCML.
  [hannosch]

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Removed dependency on GPL licensed Products.PloneTestCase.
  [hannosch]


3.0b4 - 2010-05-23
------------------

- Make the ``secure`` option of cookies configurable. This allows to restrict
  cookies to HTTPS connections alone. This closes
  http://dev.plone.org/plone/ticket/7897.
  [pfurman, hannosch]

- Use the standard libraries doctest module, instead of the deprecated one
  from zope.testing.
  [hannosch]

- Marked the session cookie as ``HTTPOnly``.
  [hannosch]

- PEP8 cleanup.
  [hannosch]

- Relicense as BSD following PF Board decision.
  http://lists.plone.org/pipermail/membership/2010-April/001123.html
  [elro]


3.0b3 - 2010-04-09
------------------

- Example IIS login form and documentation. This builds on work by Hanno and I
  at Jarn for Centrepoint.
  [elro]
